# comanche

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.feng.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile.in  README.md  README.thispatch.md  autogen.py  config_comanche.h.in  first-time.sh  load-module.sh  setenv.sh
apps/: CMakeLists.txt
apps/block-perf/: CMakeLists.txt  README
apps/block-perf/src/: main.cpp
apps/caffe/: CMakeLists.txt
apps/caffe/cmake/: Comanche.cmake  Cuda.cmake  DawnApp.cmake  Dependencies.cmake
apps/caffe/examples/dawn_store/: lenet_solver.prototxt  lenet_solver_data_gen.prototxt  lenet_solver_img_small.prototxt  lenet_solver_org.prototxt  lenet_solver_org_small.prototxt  lenet_train_test.prototxt  (+5 more)
apps/caffe/gpu_direct_wrapper/: gpu_direct.hpp  gpu_direct_test.cpp  gpu_direct_wrapper.h  setup_gdrcopy.sh
apps/caffe/tools/: caffe.cpp  convert_imageset_to_binary_batch_kvstore.cpp
apps/cuda-dma/: CMakeLists.txt  README
apps/cuda-dma/src/: cuda_dma.cpp  kernel.cu
apps/dawn-app/: .gitignore  CMakeLists.txt
apps/dawn-app/include/: cudautility.hpp  dawn_store.hpp  gpu_direct.hpp  gpu_direct_wrapper.h  kvstoreutility.hpp  tensor.h
apps/dawn-app/microbench/: CMakeLists.txt
apps/dawn-app/unit_test/: CMakeLists.txt  dawn_multithread_test.cpp  dawn_multithread_test_GPU.cu
apps/gpu-direct/: CMakeLists.txt  HOWTO.profile  README.md
apps/gpu-direct/src/: gpu_direct_demo.cpp  kernel.cu
apps/paging-tracker/: CMakeLists.txt
apps/paging-tracker/src/: main.cpp
dpu_filter/arrowfile/: CMakeLists.txt  CMakeListsProcess.txt  apache-arrow-apt-source-latest-focal.deb  compilearrow.sh  createS_parquet.py  create_file.py  create_parquet.py  create_statistics.py  filtertime.sh  install-arrow.sh  installArrow.sh  installArrow.txt  processColumn.cpp  processFile.cc  readS_parquet.py  read_arrow.py  read_dataset.cpp  read_parquet.cpp  read_parquet.py  readarrow.cpp  readparquet.cpp  runfiltertime.sh  writearrow.cpp
dpu_filter/tcp_intercept/: meson.build  meson_options.txt
dpu_filter/udp_intercept/sample_pi/: CMakeLists.txt  cmake_install.cmake  dpdk_utils.c  meson.build  pi_core.c  pi_core.h  pi_main.c  pi_worker.c  process_Datatemp.cpp  process_buffer.cc  process_buffer.h  process_data.cc  processtemp.cc  run.sh
src/components/: CMakeLists.txt
src/components/allocator/: CMakeLists.txt
src/components/api/: CMakeLists.txt  ado_itf.h  allocator_itf.h  blob_itf.h  block_allocator_itf.h  block_itf.h  cluster_itf.h  components.h  dawn_itf.h  fabric_itf.h  fs_itf.h  interfaces.h  itf_ref.h  kvindex_itf.h  kvstore_itf.h  log_itf.h  memory_itf.h  metadata_itf.h  pager_itf.h  partition_itf.h  pmem_itf.h  raid_itf.h  rdma_itf.h  region_itf.h  sample_itf.h  store_itf.h  types.h
src/components/block/: CMakeLists.txt
src/components/client/: CMakeLists.txt
src/components/cluster/: CMakeLists.txt
src/components/examples/: CMakeLists.txt
src/components/fs/: CMakeLists.txt
src/components/index/: CMakeLists.txt  README.md
src/components/metadata/: CMakeLists.txt
src/components/net/: CMakeLists.txt
src/components/partition/: CMakeLists.txt
src/components/pmem/: CMakeLists.txt
src/components/sample/: CMakeLists.txt
src/components/store/: CMakeLists.txt
src/fuse/: CMakeLists.txt  kv-ustack.fio  run_fio_exp.sh
src/fuse/append/: CMakeLists.txt  HOWTO
src/fuse/fio/: increasing-io-sz.fio  rand4kwrite.fio
src/fuse/hello/: CMakeLists.txt
src/fuse/kvfs-simple/: CMakeLists.txt
src/fuse/ustack/: .gitmodules  CMakeLists.txt  HOWTO  HOWTO.trace  kvustack_cleanup.sh  run_fio_exp.sh  run_wholefile_exp.sh  start_kvfs_daemon.sh
src/lib/: CMakeLists.txt
src/lib/cityhash/: CMakeLists.txt
src/lib/common/: .cproject  .project  CMakeLists.txt  LICENSE.md  city.cc  city_config.h  component.cc  cpu.cc  crc32.cc  cycles.cc  dump_utils.cc  memory.cc  rand.cc  str_utils.cc  utils.cc
src/lib/core/: CMakeLists.txt  Format.mk
src/lib/dawn-client/: CMakeLists.txt
src/lib/dpdk/: CMakeLists.txt  bootstrap.sh  build.sh  dpdk  eal_memory.c  install.sh
src/lib/libfabric/: CMakeLists.txt  bootstrap.sh
src/lib/memkind/: CMakeLists.txt
src/lib/ndctl/: CMakeLists.txt
src/lib/nupm/: CMakeLists.txt
src/lib/pmdk/: CMakeLists.txt  bootstrap.sh
src/lib/spdk/: CMakeLists.txt  bootstrap.sh
src/lib/tds/: CMakeLists.txt
src/python/dawn-api/: CMakeLists.txt  __init__.py  dawn-api.py  dawn-shell-init.py  dawn-shell.in  normal_start.py  setup.py  setup.py.in
testing/REST-server/: CMakeLists.txt
testing/REST-server/src/: rest_serv.cpp
testing/integrity/: CMakeLists.txt  README.md  component_info.h  test_kvindex.cpp  test_kvstore.cpp
testing/kvstore/: CMakeLists.txt  HOWTO.dax  HOWTO.profile  README.md  data.h  dotted_pair.h  exp_erase.cpp  exp_erase.h  exp_get.h  exp_get_direct.h  exp_get_direct_latency.h  exp_get_latency.h  exp_insert_erase.cpp  exp_insert_erase.h  exp_iops.h  exp_put.h  exp_put_direct.h  exp_put_direct_latency.h  exp_put_latency.h  exp_throughput.cpp  exp_throughput.h  exp_throughupdate.cpp  exp_throughupdate.h  exp_update.cpp  exp_update.h  experiment.cpp  experiment.h  get_cpu_mask_from_string.h  get_vector_from_string.h  kvstore_perf.cpp  kvstore_perf.h  program_options.cpp  program_options.h  statistics.cpp  statistics.h  stopwatch.h  task.h  test_kvstore.cpp
testing/kvstore/plot_results/: README.md  matplotlib_pyplot_utils.py  plot_everything_in_file.py  plot_results.py
testing/kvstore/unit_test/: CMakeLists.txt  test_stats.cpp  test_stopwatch.cpp
testing/ycsb/: CMakeLists.txt
testing/ycsb/aerospike/: ubuntu18-libevent.tgz  ubuntu18.tgz
testing/ycsb/src/: aerospikedb.cpp  aerospikedb.h  args.h  const_generator.h  counter_generator.h  dawndb.cpp  dawndb.h  db.h  db_fact.h  discrete_generator.h  generator.h  memcached.cpp  properties.h  redisc.cpp  scrambled_zipfian_generator.h  skewed_latest_generator.h  uniform_generator.h  workload.conf  workload.cpp  workload.h  ycsb_perf.back  ycsb_perf.cpp  ycsb_perf.h  zipfian_generator.h
testing/ycsb/unit_test/: CMakeLists.txt  test1.cpp
(+2047 files in other folders)
